# distributed-snp

./: .gitignore  README.md  pytest.ini  requirements.txt
cuda/: CMakeLists.txt  Makefile  README.md  matmul_distributed  matmul_mpi_cuda.cu
cuda/agent/: main.prompt.md
cuda/include/distributed_snp/common/: cuda_utils.h
cuda/include/distributed_snp/linear_algebra/: cpu_backend.h  dist_backend.h  gpu_backend.h  linear_algebra.h
cuda/include/distributed_snp/snp/: rule.h  sorting.h  system.h
cuda/src/: benchmark.cpp  main.cpp  matrix_ops.cpp  matrix_ops.h  mpi_utils.h
cuda/src/common/: cuda_utils.cu
cuda/src/linear_algebra/cpu/: linear_algebra_cpu.cpp  linear_algebra_cpu.h
cuda/src/linear_algebra/distributed/: cuda_utils.h  linear_algebra_dist.cpp  linear_algebra_distributed.cpp  linear_algebra_distributed.h  main.cpp  matrix_ops.cpp  mpi_utils.cpp
cuda/src/linear_algebra/gpu/: cuda_kernels.cu  kernels.cu  linear_algebra_gpu.cpp  linear_algebra_gpu.h
cuda/src/matrix_mul/: matrix_mul.h
cuda/src/matrix_mul/distributed/: Makefile  cuda_kernels.cu  matrix_mul_distributed.cpp  mpi_utils.cpp
cuda/src/matrix_mul/gpu/: cuda_utils.h  matrix_mul_gpu.cpp
cuda/src/snp/: Makefile  linear_algebra.cpp  linear_algebra.h  snp.cpp  snp_system.cpp  snp_system.h  sorting.cpp
cuda/tests/: test_mpi_ops.cpp
python/src/: README.md
python/src/main/: simulate.py
python/src/main/models/: SNP.py  __init__.py
python/src/test/: test_2n_generator.py  test_bit_adder.py  test_comparator.py
python/src/test/resources/: bit-adder.json
src/main/: __init__.py
src/main/models/: SNP.py  utils.py
src/test/: conftest.py  example.py  test_2n_generator.py  test_bit_adder.py  test_comparator.py  test_complex_system.py  test_example.py  test_standalone.py  test_system.json  tests.py  validate.py
src/test/resources/: 2n-generator.json  comparator.json
